save group data ok and get ok
