# Chat_Goland/Handler/ChatroomGroupMessage/Queryies/List/ChatroomGroupMessageQueryRequest.go
@@ -1,0 +1,5 @@
+package ChatroomGroupMessage
+
+type ChatroomGroupMessageQueryRequest struct {
+	GroupName string `form:"groupName" binding:"required"`
+}
